[tool.poetry]
name = "vrcamera-converter"
version = "0.1.0"
description = ""
authors = ["Takahiro55555"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-contrib-python = "4.1.1.26"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
